--- a/sitewomen/women/templates/women/add_page.html
+++ b/sitewomen/women/templates/women/add_page.html
@@ -3,7 +3,11 @@
 <h1>{{ title }}</h1>
 <form action="" method="post">
   {% csrf_token %}
-  {{ form.as_p }}
+  {% for f in form %}
+  <div class="form-error">{{ f.non_field_errors }}</div>
+  <p><label class="form-label" for="{{f.id_for_label}}">{{ f.label }}</label>{{ f }}</p>
+  <div class="form-error">{{ f.errors }}</div>
+  {% endfor %}
   <button type="submit">Отправить</button>
 </form>
 {% endblock %}
